@@ -1,3 +1,9 @@
+2009-06-16  Felix Riemann  <friemann@svn.gnome.org>
+
+	* plugins/exif-display/Makefile.am:
+	* plugins/exif-display/eog-exif-display-plugin.c:
+	Don't install UI files into the plugins folder directly.
+
 2009-06-12  Felix Riemann  <friemann@svn.gnome.org>
 
 	* configure.ac:
